-
Bug
-
Resolution: Fixed
-
P2: Important
-
None
-
6.9
-
None
-
0ace5ba03 (dev), 4d009678c (6.9), 933128d26 (6.8)
When converting a QImage from a format with alpha channel to one of the RGBX formats, the value in the "X" field is normally reset to 0xff or equivalent, corresponding to the fully opaque alpha value. However, in a few combinations of from- and to formats, this does not happen. Attached is a patch to the qimage autotest that adds a test function for this, it can be used to reproduce this issue: convertAlphaToOpaque.diff
Note particularly the 3 cases of conversion to RGB32 where the issue only appears in in-place conversion(!?)
For Gerrit Dashboard: QTBUG-132051 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
610149,3 | Fix in-place conversion of certain QImage formats | dev | qt/qtbase | Status: MERGED | +2 | +1 |
611564,2 | Fix in-place conversion of certain QImage formats | 6.9 | qt/qtbase | Status: MERGED | +2 | 0 |
611675,2 | Fix in-place conversion of certain QImage formats | 6.8 | qt/qtbase | Status: MERGED | +2 | 0 |